Fix some checkstyle